[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scenes/Personagens/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Personagens/Player/Player.png" type="Texture" id=2]
[ext_resource path="res://Assets/Particulas/Explosion1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sons/Laser_Shoot2.wav" type="AudioStream" id=11]
[ext_resource path="res://Assets/Sons/Hit_Hurt.wav" type="AudioStream" id=12]
[ext_resource path="res://Assets/Sons/Explosion.wav" type="AudioStream" id=13]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 48, 32, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 48, 32, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 32, 48, 32, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 48 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "run",
"speed": 13.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), null ],
"loop": true,
"name": "EXPLODED",
"speed": 15.0
}, {
"frames": [ SubResource( 11 ), null, SubResource( 11 ), null, SubResource( 11 ), null ],
"loop": true,
"name": "DAMAGED",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=13]
radius = 40.0

[sub_resource type="CircleShape2D" id=14]
radius = 50.0

[node name="Player" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 12 )
animation = "run"
playing = true

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 10 )
shape = SubResource( 13 )

[node name="Shot_Button" type="TouchScreenButton" parent="."]
position = Vector2( 0, 10 )
shape = SubResource( 14 )
shape_centered = false

[node name="Sound_SHOOT" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )

[node name="Sound_HIT" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )

[node name="Sound_BOOM" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )
bus = "Shot Sound"

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="BulletTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="QuadLaserTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Initial_position" type="Position2D" parent="."]

[node name="Shot_position" type="Position2D" parent="."]
[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="pressed" from="Shot_Button" to="." method="_on_Shot_Button_pressed"]
[connection signal="released" from="Shot_Button" to="." method="_on_Shot_Button_released"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
[connection signal="timeout" from="BulletTimer" to="." method="_on_BulletTimer_timeout"]
[connection signal="timeout" from="QuadLaserTimer" to="." method="_on_QuadLaserTimer_timeout"]
